/* $Id: changelog,v 1.1666 2001-08-31 00:20:04 phaller Exp $ */

 2001-08-30: Patrick Haller <patrick.haller@innotek.de>
    - SHLWAPI:  o Improvements on ordinal functions

 2001-08-29: Patrick Haller <patrick.haller@innotek.de>
    - USER32:   o BUTTON.CPP: don't draw invisible buttons
                  (fixes MS ACMSETUP w/ OWNERDRAW pushbuttons)

 2001-08-28: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    o CreateDIBitmap: reverse bitmap for negative height
                  (fixes buttons in Abiword)

 2001-08-27: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o FillRect fix: brush 0 means current selected brush 
                  (verified in NT4)
                  (fixes background in registration dialog of CVP)

 2001-08-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Convert icon & cursor to OS/2 format in CreateIconIndirect,
                  CreateCursor & CreateIcon
                o Convert RGB 555 to 565 for 16 bits icons and cursors 
                  (win to os/2 icon/cursor conversion)
    - SHELL32:  o SHBrowseForFolderA fix: don't send dummy BFFM_SELCHANGED 
                  during WM_INITDIALOG
                  (breaks folder dialog in CVP)

 2001-08-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Set last error to ERROR_ALREADY_EXISTS when CreateMutex,
                  CreateEvent or CreateSemaphore is called with existing
                  semaphore name.
    - CUSTOMBUILD: 
                o Added riched32
    - RICHED32: o Changes for custom build

 2000-08-25: Yuri Dario <mc6530@mclink.it>
    - USER32:   o Button: don't send BN_PAINT/HILITE/UNHILITE/DISABLE
                  (not done in Wine either)

 2001-08-23: Sander van Leeuwen <sandervl@xs4all.nl>
    - OLEAUT32: o Wine updates
    - QUARTZ:   o Wine updates

 2001-08-19: Sander van Leeuwen <sandervl@xs4all.nl>
    - QUARTZ:   o Added stub dll from Wine

 2001-08-19: knut st. osmundsen <kosmunds@csc.com>
    - Win32k.lib: